--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,9 +85,9 @@ services:
     networks:
       - microservices
 
-  # Catalog Database (Elasticsearch)
+  # Catalog Database (Elasticsearch) - DOWNGRADED TO v5.6
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.16
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
