--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -1,15 +1,14 @@
-﻿FROM golang:1.22-alpine AS builder
-
+﻿FROM golang:1.23-alpine AS builder
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o order ./order/cmd/order
+RUN CGO_ENABLED=0 GOOS=linux go build -o main ./order/cmd/order
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
-COPY --from=builder /app/order .
+COPY --from=builder /app/main .
 EXPOSE 8080
-CMD ["./order"]
+CMD ["./main"]
